# internship_quadruped

pinocchio_test/: CMakeLists.txt  a1_IK.py  frames_to_vid.py  load_vis.py  move_body.py  place_IK.py  vis_joints.py
pinocchio_test/src/: IK.cpp  load_model.cpp
robots/go1_description/meshes/: trunk.dae
robots/go1_description/xacro/: leg.xacro
